# DosijeProf

./: .gitignore  CMakeLists.txt  README.md
database/: baza_podataka  baza_podataka.dia  clear_database.sql  create_tables.sql
include/: centralwidget.h  clickablelabel.h  dpodaci.h  mainwindow.h
res/: ikonice.qrc  slike.qrc
res/ui/: podaci.ui
src/: centralwidget.cpp  dpodaci.cpp  mainwindow.cpp
